--- a/TrackLibrary/Views/Book/Index.cshtml
+++ b/TrackLibrary/Views/Book/Index.cshtml
@@ -2,7 +2,7 @@
 <link href="~/Content/pagination-styles.css" rel="stylesheet" />
 
 
-
+@if (Model == null) { return;}
 
 <div class="row">
     <div id="PanelLeft">
